[gd_scene load_steps=3 format=3 uid="island_menu_scene_1"]

[ext_resource path="res://scripts/ui/island_menu.gd" type="Script" id=1]

[node name="IslandMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.1, 0.15, 0.95)

[node name="VBox" type="VBoxContainer" parent="."]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9

[node name="Title" type="Label" parent="VBox"]
text = "Управление островом"
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBox"]

[node name="HBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="InfoPanel" type="Panel" parent="VBox/HBox"]
layout_mode = 2
custom_minimum_size = Vector2(300, 0)

[node name="VBoxInfo" type="VBoxContainer" parent="VBox/HBox/InfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LevelLabel" type="Label" parent="VBox/HBox/InfoPanel/VBoxInfo"]
text = "Уровень острова: 1"
theme_override_font_sizes/font_size = 18

[node name="SizeLabel" type="Label" parent="VBox/HBox/InfoPanel/VBoxInfo"]
text = "Размер: 5x5 м"
theme_override_font_sizes/font_size = 16

[node name="XPBar" type="ProgressBar" parent="VBox/HBox/InfoPanel/VBoxInfo"]
custom_minimum_size = Vector2(0, 30)
max_value = 100.0
value = 0.0

[node name="XPLabel" type="Label" parent="VBox/HBox/InfoPanel/VBoxInfo"]
text = "Опыт: 0 / 100"
theme_override_font_sizes/font_size = 14

[node name="UpgradePanel" type="Panel" parent="VBox/HBox"]
layout_mode = 2
custom_minimum_size = Vector2(400, 0)

[node name="VBoxUpgrade" type="VBoxContainer" parent="VBox/HBox/UpgradePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="UpgradeLabel" type="Label" parent="VBox/HBox/UpgradePanel/VBoxUpgrade"]
text = "Расширение острова:"
theme_override_font_sizes/font_size = 18

[node name="CostLabel" type="Label" parent="VBox/HBox/UpgradePanel/VBoxUpgrade"]
text = "Стоимость следующего уровня: 100"
theme_override_font_sizes/font_size = 16

[node name="UpgradeButton" type="Button" parent="VBox/HBox/UpgradePanel/VBoxUpgrade"]
text = "Расширить остров"
disabled = true

[node name="BuildingsPanel" type="Panel" parent="VBox/HBox"]
layout_mode = 2
custom_minimum_size = Vector2(300, 0)

[node name="VBoxBuildings" type="VBoxContainer" parent="VBox/HBox/BuildingsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BuildingsLabel" type="Label" parent="VBox/HBox/BuildingsPanel/VBoxBuildings"]
text = "Постройки:"
theme_override_font_sizes/font_size = 18

[node name="BuildingsList" type="VBoxContainer" parent="VBox/HBox/BuildingsPanel/VBoxBuildings"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="VBox"]
text = "Закрыть"

